Closed Bug 1228489 Opened 9 years ago Closed 9 years ago

dom/ipc/ContentParent.cpp:5731:12: error: invalid use of incomplete type 'class nsIProfilerStartParams'

Categories

(Core :: Gecko Profiler, defect)

Unspecified
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: jbeich, Unassigned)

References

Details

Attachments

(1 file)

On platforms lacking SPS profiler (iOS, Linux/PPC, BSDs, Solaris) the build is broken.

In file included from /objdir/dom/ipc/Unified_cpp_dom_ipc0.cpp:38:
dom/ipc/ContentParent.cpp:5731:12: error: member access into
      incomplete type 'nsIProfilerStartParams'
    aParams->GetEntries(&ipcParams.entries());
           ^
../../dist/include/GeckoProfiler.h:68:7: note: forward declaration of
      'nsIProfilerStartParams'
class nsIProfilerStartParams;
      ^
In file included from /objdir/dom/ipc/Unified_cpp_dom_ipc0.cpp:38:
dom/ipc/ContentParent.cpp:5732:12: error: member access into
      incomplete type 'nsIProfilerStartParams'
    aParams->GetInterval(&ipcParams.interval());
           ^
../../dist/include/GeckoProfiler.h:68:7: note: forward declaration of
      'nsIProfilerStartParams'
class nsIProfilerStartParams;
      ^
In file included from /objdir/dom/ipc/Unified_cpp_dom_ipc0.cpp:38:
dom/ipc/ContentParent.cpp:5733:35: error: member access into
      incomplete type 'nsIProfilerStartParams'
    ipcParams.features() = aParams->GetFeatures();
                                  ^
../../dist/include/GeckoProfiler.h:68:7: note: forward declaration of
      'nsIProfilerStartParams'
class nsIProfilerStartParams;
      ^
In file included from /objdir/dom/ipc/Unified_cpp_dom_ipc0.cpp:38:
dom/ipc/ContentParent.cpp:5734:40: error: member access into
      incomplete type 'nsIProfilerStartParams'
    ipcParams.threadFilters() = aParams->GetThreadFilterNames();
                                       ^
../../dist/include/GeckoProfiler.h:68:7: note: forward declaration of
      'nsIProfilerStartParams'
class nsIProfilerStartParams;
      ^
4 errors generated.
Does the attached patch let you build? If so, I'll try to get it into the tree today.
Flags: needinfo?(jbeich)
Yes. My build succeeded with the patch.
Flags: needinfo?(jbeich)
Attachment #8693008 - Flags: review?(bgirard)
Attachment #8693008 - Flags: review?(bgirard) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/a16c2903506aa71c07f0ba3dda932bed03985d0c
Bug 1228489 - ifdef out ContentParent::StartProfiler for builds without profiler support. r=BenWa
https://hg.mozilla.org/mozilla-central/rev/a16c2903506a
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: