Bug 1228489 - ifdef out ContentParent::StartProfiler for builds without profiler support. r=BenWa