dom/ipc/ContentParent.cpp
@@ -5721,6 +5721,7 @@ ContentParent::RecvGetAndroidSystemInfo(AndroidSystemInfo* aInfo)
 void
 ContentParent::StartProfiler(nsIProfilerStartParams* aParams)
 {
+#ifdef MOZ_ENABLE_PROFILER_SPS
     if (NS_WARN_IF(!aParams)) {
         return;
     }
@@ -5734,6 +5735,7 @@ ContentParent::StartProfiler(nsIProfilerStartParams* aParams)
     ipcParams.threadFilters() = aParams->GetThreadFilterNames();
 
     Unused << SendStartProfiler(ipcParams);
+#endif
 }
 
 } // namespace dom
